--- a/fm/bleh.user.css
+++ b/fm/bleh.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bleh (dev)
 @namespace      github.com/katelyynn/bleh
-@version        2024.06111
+@version        2024.0612
 @license        GPL-3.0
 @author         kate
 @updateURL      https://github.com/katelyynn/bleh/raw/uwu/fm/bleh.user.css
@@ -10566,7 +10566,7 @@ so this is good enough - use the community docs */
             gap: var(--button-list-gap);
 
             &.sep {
-                margin-top: calc(20px - var(--card-gap));
+                margin-top: calc(-20px + var(--card-gap));
                 padding-top: var(--card-gap);
                 border-top: 1px solid hsl(var(--b4));
             }
